--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
@@ -23,11 +22,45 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    // Anko Commons
+    implementation "org.jetbrains.anko:anko:$ANKO_VERSION"
+
+    //dagger2
+    implementation "com.google.dagger:dagger-android:$DAGGER2_VERSION"
+    implementation "com.google.dagger:dagger-android-support:$DAGGER2_VERSION"
+    kapt "com.google.dagger:dagger-android-processor:$DAGGER2_VERSION"
+    kapt "com.google.dagger:dagger-compiler:$DAGGER2_VERSION"
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
+    //rx
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    //event bus
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    //network
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
+    //ui
+    compile 'net.opacapp:multiline-collapsingtoolbar:1.6.0'
+    implementation files('libs/universal-image-loader-1.9.5.jar')
+
+    //Log
+    implementation 'com.orhanobut:logger:2.1.1'
 }
