--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        maven { url "https://www.jitpack.io" }
         jcenter()
+        mavenCentral()
+        google()
     }
 }
 
