--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     //tab
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+
+    //refresh
+    compile "com.scwang.smartrefresh:SmartRefreshLayout:$REFRESH_VERSION"
+    compile "com.scwang.smartrefresh:SmartRefreshHeader:$REFRESH_VERSION"
 }
